# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-action.yml
gendiff/: __init__.py
gendiff/differ/: data_loader.py  diff_tree_generator.py  processor.py
gendiff/formater/: decorator.py  iterator.py  json.py  plain.py  pool.py  stylish.py
gendiff/module/: data_loader.py  differ.py  flag.py  walker.py
gendiff/module/formater/: decorator.py  default.py  helper.py  iterator.py  json.py  plain.py
gendiff/scripts/: gendiff.py
tests/: test_gererate_diff.py
tests/fixtures/: flat_2.yaml  flat_2.yml  flat_yaml_result.txt
tests/fixtures/json_result/: nested_json.txt
